--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <a href="https://wa.me/989113938636" target="_blank">
         <img src="photo_ne/whatsapp.png" alt="WhatsApp">
       </a>
-      <a href="https://instagram.com/sangil_offcial" target="_blank">
+      <a href="https://instagram.com/sangill_offcial" target="_blank">
         <img src="photo_ne/insta.png" alt="Instagram">
       </a>
     </div>
